CREATE TABLE public.audit_logs (
    id bigint NOT NULL,
    action character varying(255) NOT NULL,
    actor_user_id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    details character varying(1000),
    target_user_id bigint
);

ALTER TABLE public.audit_logs ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.audit_logs_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.chat_messages (
    id bigint NOT NULL,
    content text,
    sent_at timestamp(6) without time zone NOT NULL,
    incident_id bigint NOT NULL,
    sender_id bigint NOT NULL
);

ALTER TABLE public.chat_messages ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chat_messages_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.facilities (
    id bigint NOT NULL,
    address character varying(255),
    facility_type character varying(255) NOT NULL,
    latitude double precision NOT NULL,
    longitude double precision NOT NULL,
    name character varying(255) NOT NULL,
    registered boolean NOT NULL,
    CONSTRAINT ck_facilities_facility_type CHECK (
        ((facility_type)::text = ANY (
            (ARRAY[
                'HOSPITAL'::character varying,
                'AMBULANCE_STATION'::character varying,
                'FIRE_STATION'::character varying,
                'POLICE_STATION'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.facilities ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.facilities_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.first_responder_application_documents (
    id bigint NOT NULL,
    original_file_name character varying(255),
    storage_path character varying(255) NOT NULL,
    uploaded_at timestamp(6) without time zone NOT NULL,
    application_id bigint NOT NULL
);

ALTER TABLE public.first_responder_application_documents ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.first_responder_application_documents_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.first_responder_applications (
    id bigint NOT NULL,
    motivation text NOT NULL,
    review_notes character varying(255),
    reviewed_at timestamp(6) without time zone,
    reviewed_by bigint,
    status character varying(255) NOT NULL,
    submitted_at timestamp(6) without time zone NOT NULL,
    citizen_id bigint NOT NULL,
    CONSTRAINT ck_first_responder_applications_status CHECK (
        ((status)::text = ANY (
            (ARRAY[
                'PENDING'::character varying,
                'APPROVED'::character varying,
                'REJECTED'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.first_responder_applications ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.first_responder_applications_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.hospital_transfers (
    id bigint NOT NULL,
    destination_name_freetext character varying(255),
    status character varying(255) NOT NULL,
    hospital_id bigint,
    mission_id bigint NOT NULL,
    CONSTRAINT ck_hospital_transfers_status CHECK (
        ((status)::text = ANY (
            (ARRAY[
                'SELECTED'::character varying,
                'EN_ROUTE'::character varying,
                'ARRIVED'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.hospital_transfers ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.hospital_transfers_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.incident_media (
    id bigint NOT NULL,
    media_type character varying(255) NOT NULL,
    storage_path character varying(255),
    text_content text,
    updated_at timestamp(6) without time zone NOT NULL,
    uploaded_at timestamp(6) without time zone NOT NULL,
    url character varying(255),
    incident_id bigint NOT NULL,
    CONSTRAINT ck_incident_media_media_type CHECK (
        ((media_type)::text = ANY (
            (ARRAY[
                'PHOTO'::character varying,
                'VIDEO'::character varying,
                'AUDIO'::character varying,
                'TEXT'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.incident_media ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.incident_media_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.incidents (
    id bigint NOT NULL,
    address character varying(255),
    ai_confidence double precision,
    ai_duplicate_confidence double precision,
    ai_priority character varying(255),
    cancellation_reason character varying(255),
    cancelled_at timestamp(6) without time zone,
    category character varying(255) NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    description character varying(2000),
    injured_count integer NOT NULL,
    latitude double precision NOT NULL,
    location_source character varying(255) NOT NULL,
    longitude double precision NOT NULL,
    source character varying(255) NOT NULL,
    status character varying(255) NOT NULL,
    version bigint NOT NULL,
    ai_suggested_duplicate_of_id bigint,
    cancelled_by bigint,
    citizen_id bigint NOT NULL,
    duplicate_of_incident_id bigint,

    CONSTRAINT ck_incidents_ai_priority CHECK (
        ((ai_priority)::text = ANY (
            (ARRAY[
                'CRITICAL'::character varying,
                'HIGH'::character varying,
                'MEDIUM'::character varying,
                'LOW'::character varying
            ])::text[]
        ))
    ),

    CONSTRAINT ck_incidents_category CHECK (
        ((category)::text = ANY (
            (ARRAY[
                'MEDICAL'::character varying,
                'POLICE'::character varying,
                'FIRE'::character varying
            ])::text[]
        ))
    ),

    CONSTRAINT ck_incidents_location_source CHECK (
        ((location_source)::text = ANY (
            (ARRAY[
                'GPS'::character varying,
                'MANUAL_PIN'::character varying
            ])::text[]
        ))
    ),

    CONSTRAINT ck_incidents_source CHECK (
        ((source)::text = ANY (
            (ARRAY[
                'CITIZEN_APP'::character varying,
                'SENSOR_DEVICE'::character varying
            ])::text[]
        ))
    ),

    CONSTRAINT ck_incidents_status CHECK (
        ((status)::text = ANY (
            (ARRAY[
                'NEW'::character varying,
                'AI_PROCESSED'::character varying,
                'DISPATCHER_REVIEW'::character varying,
                'ASSIGNED'::character varying,
                'IN_PROGRESS'::character varying,
                'RESOLVED'::character varying,
                'CANCELLED'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.incidents ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.incidents_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.mission_participants (
    id bigint NOT NULL,
    mission_id bigint NOT NULL,
    user_id bigint NOT NULL
);

ALTER TABLE public.mission_participants ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.mission_participants_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.missions (
    id bigint NOT NULL,
    accepted_at timestamp(6) without time zone,
    arrived_at timestamp(6) without time zone,
    completed_at timestamp(6) without time zone,
    offered_at timestamp(6) without time zone,
    rejection_reason character varying(255),
    status character varying(255) NOT NULL,
    version bigint NOT NULL,
    incident_id bigint NOT NULL,
    unit_id bigint NOT NULL,

    CONSTRAINT ck_missions_status CHECK (
        ((status)::text = ANY (
            (ARRAY[
                'OFFERED'::character varying,
                'ACCEPTED'::character varying,
                'REJECTED'::character varying,
                'EN_ROUTE'::character varying,
                'ARRIVED'::character varying,
                'COMPLETED'::character varying,
                'CANCELLED'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.missions ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.missions_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.patient_vitals_updates (
    id bigint NOT NULL,
    blood_pressure_diastolic integer,
    blood_pressure_systolic integer,
    consciousness_level character varying(255),
    heart_rate integer,
    notes text,
    recorded_at timestamp(6) without time zone NOT NULL,
    respiratory_rate integer,
    spo2 integer,
    temperature_celsius double precision,
    hospital_transfer_id bigint NOT NULL,

    CONSTRAINT ck_patient_vitals_updates_consciousness_level CHECK (
        ((consciousness_level)::text = ANY (
            (ARRAY[
                'ALERT'::character varying,
                'VERBAL'::character varying,
                'PAIN'::character varying,
                'UNRESPONSIVE'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.patient_vitals_updates ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.patient_vitals_updates_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.response_units (
    id bigint NOT NULL,
    latitude double precision,
    longitude double precision,
    plate_number character varying(255),
    status character varying(255) NOT NULL,
    unit_type character varying(255) NOT NULL,
    assigned_employee_id bigint,
    facility_id bigint,

    CONSTRAINT ck_response_units_status CHECK (
        ((status)::text = ANY (
            (ARRAY[
                'AVAILABLE'::character varying,
                'BUSY'::character varying,
                'OFFLINE'::character varying,
                'MAINTENANCE'::character varying
            ])::text[]
        ))
    ),

    CONSTRAINT ck_response_units_unit_type CHECK (
        ((unit_type)::text = ANY (
            (ARRAY[
                'AMBULANCE'::character varying,
                'FIRE_TRUCK'::character varying,
                'POLICE_CAR'::character varying,
                'FIRST_RESPONDER'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.response_units ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.response_units_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.roles (
    role_id integer NOT NULL,
    role_name character varying(255) NOT NULL
);

ALTER TABLE public.roles ALTER COLUMN role_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.roles_role_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.shift_assignments (
    id bigint NOT NULL,
    end_time timestamp(6) without time zone,
    role_in_shift character varying(255) NOT NULL,
    start_time timestamp(6) without time zone NOT NULL,
    employee_id bigint NOT NULL,
    unit_id bigint NOT NULL,

    CONSTRAINT ck_shift_assignments_role_in_shift CHECK (
        ((role_in_shift)::text = ANY (
            (ARRAY[
                'LEAD'::character varying,
                'CREW'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.shift_assignments ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.shift_assignments_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.users (
    id bigint NOT NULL,
    address character varying(255),
    created_at timestamp(6) without time zone NOT NULL,
    deleted_at timestamp(6) without time zone,
    email character varying(255),
    enabled boolean NOT NULL,
    firebase_uid character varying(255) NOT NULL,
    first_name character varying(255) NOT NULL,
    gender character varying(30),
    last_name character varying(255) NOT NULL,
    phone character varying(255),
    phone_verified boolean NOT NULL,
    profile_completed boolean NOT NULL,
    updated_at timestamp(6) without time zone NOT NULL,
    facility_id bigint,
    role_id integer NOT NULL,

    CONSTRAINT ck_users_gender CHECK (
        ((gender)::text = ANY (
            (ARRAY[
                'MALE'::character varying,
                'FEMALE'::character varying
            ])::text[]
        ))
    )
);

ALTER TABLE public.users ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.users_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

ALTER TABLE ONLY public.audit_logs
    ADD CONSTRAINT pk_audit_logs PRIMARY KEY (id);

ALTER TABLE ONLY public.chat_messages
    ADD CONSTRAINT pk_chat_messages PRIMARY KEY (id);

ALTER TABLE ONLY public.facilities
    ADD CONSTRAINT pk_facilities PRIMARY KEY (id);

ALTER TABLE ONLY public.first_responder_application_documents
    ADD CONSTRAINT pk_first_responder_application_documents PRIMARY KEY (id);

ALTER TABLE ONLY public.first_responder_applications
    ADD CONSTRAINT pk_first_responder_applications PRIMARY KEY (id);

ALTER TABLE ONLY public.hospital_transfers
    ADD CONSTRAINT pk_hospital_transfers PRIMARY KEY (id);

ALTER TABLE ONLY public.incident_media
    ADD CONSTRAINT pk_incident_media PRIMARY KEY (id);

ALTER TABLE ONLY public.incidents
    ADD CONSTRAINT pk_incidents PRIMARY KEY (id);

ALTER TABLE ONLY public.mission_participants
    ADD CONSTRAINT pk_mission_participants PRIMARY KEY (id);

ALTER TABLE ONLY public.missions
    ADD CONSTRAINT pk_missions PRIMARY KEY (id);

ALTER TABLE ONLY public.patient_vitals_updates
    ADD CONSTRAINT pk_patient_vitals_updates PRIMARY KEY (id);

ALTER TABLE ONLY public.response_units
    ADD CONSTRAINT pk_response_units PRIMARY KEY (id);

ALTER TABLE ONLY public.roles
    ADD CONSTRAINT pk_roles PRIMARY KEY (role_id);

ALTER TABLE ONLY public.shift_assignments
    ADD CONSTRAINT pk_shift_assignments PRIMARY KEY (id);

ALTER TABLE ONLY public.users
    ADD CONSTRAINT pk_users PRIMARY KEY (id);

ALTER TABLE ONLY public.users
    ADD CONSTRAINT uk_users_firebase_uid UNIQUE (firebase_uid);

ALTER TABLE ONLY public.users
    ADD CONSTRAINT uk_users_email UNIQUE (email);

ALTER TABLE ONLY public.roles
    ADD CONSTRAINT uk_roles_role_name UNIQUE (role_name);

ALTER TABLE ONLY public.response_units
    ADD CONSTRAINT uk_response_units_plate_number UNIQUE (plate_number);

ALTER TABLE ONLY public.hospital_transfers
    ADD CONSTRAINT uk_hospital_transfers_mission_id UNIQUE (mission_id);

ALTER TABLE ONLY public.incident_media
    ADD CONSTRAINT fk_incident_media_incident_id
    FOREIGN KEY (incident_id)
    REFERENCES public.incidents(id);

ALTER TABLE ONLY public.missions
    ADD CONSTRAINT fk_missions_unit_id
    FOREIGN KEY (unit_id)
    REFERENCES public.response_units(id);

ALTER TABLE ONLY public.first_responder_application_documents
    ADD CONSTRAINT fk_first_responder_application_documents_application_id
    FOREIGN KEY (application_id)
    REFERENCES public.first_responder_applications(id);

ALTER TABLE ONLY public.mission_participants
    ADD CONSTRAINT fk_mission_participants_mission_id
    FOREIGN KEY (mission_id)
    REFERENCES public.missions(id);

ALTER TABLE ONLY public.shift_assignments
    ADD CONSTRAINT fk_shift_assignments_unit_id
    FOREIGN KEY (unit_id)
    REFERENCES public.response_units(id);

ALTER TABLE ONLY public.hospital_transfers
    ADD CONSTRAINT fk_hospital_transfers_mission_id
    FOREIGN KEY (mission_id)
    REFERENCES public.missions(id);

ALTER TABLE ONLY public.hospital_transfers
    ADD CONSTRAINT fk_hospital_transfers_hospital_id
    FOREIGN KEY (hospital_id)
    REFERENCES public.facilities(id);

ALTER TABLE ONLY public.missions
    ADD CONSTRAINT fk_missions_incident_id
    FOREIGN KEY (incident_id)
    REFERENCES public.incidents(id);

ALTER TABLE ONLY public.patient_vitals_updates
    ADD CONSTRAINT fk_patient_vitals_updates_hospital_transfer_id
    FOREIGN KEY (hospital_transfer_id)
    REFERENCES public.hospital_transfers(id);

ALTER TABLE ONLY public.chat_messages
    ADD CONSTRAINT fk_chat_messages_sender_id
    FOREIGN KEY (sender_id)
    REFERENCES public.users(id);

ALTER TABLE ONLY public.mission_participants
    ADD CONSTRAINT fk_mission_participants_user_id
    FOREIGN KEY (user_id)
    REFERENCES public.users(id);

ALTER TABLE ONLY public.response_units
    ADD CONSTRAINT fk_response_units_assigned_employee_id
    FOREIGN KEY (assigned_employee_id)
    REFERENCES public.users(id);

ALTER TABLE ONLY public.incidents
    ADD CONSTRAINT fk_incidents_cancelled_by
    FOREIGN KEY (cancelled_by)
    REFERENCES public.users(id);

ALTER TABLE ONLY public.response_units
    ADD CONSTRAINT fk_response_units_facility_id
    FOREIGN KEY (facility_id)
    REFERENCES public.facilities(id);

ALTER TABLE ONLY public.chat_messages
    ADD CONSTRAINT fk_chat_messages_incident_id
    FOREIGN KEY (incident_id)
    REFERENCES public.incidents(id);

ALTER TABLE ONLY public.incidents
    ADD CONSTRAINT fk_incidents_ai_suggested_duplicate_of_id
    FOREIGN KEY (ai_suggested_duplicate_of_id)
    REFERENCES public.incidents(id);

ALTER TABLE ONLY public.incidents
    ADD CONSTRAINT fk_incidents_duplicate_of_incident_id
    FOREIGN KEY (duplicate_of_incident_id)
    REFERENCES public.incidents(id);

ALTER TABLE ONLY public.shift_assignments
    ADD CONSTRAINT fk_shift_assignments_employee_id
    FOREIGN KEY (employee_id)
    REFERENCES public.users(id);

ALTER TABLE ONLY public.incidents
    ADD CONSTRAINT fk_incidents_citizen_id
    FOREIGN KEY (citizen_id)
    REFERENCES public.users(id);

ALTER TABLE ONLY public.users
    ADD CONSTRAINT fk_users_role_id
    FOREIGN KEY (role_id)
    REFERENCES public.roles(role_id);

ALTER TABLE ONLY public.users
    ADD CONSTRAINT fk_users_facility_id
    FOREIGN KEY (facility_id)
    REFERENCES public.facilities(id);

ALTER TABLE ONLY public.first_responder_applications
    ADD CONSTRAINT fk_first_responder_applications_citizen_id
    FOREIGN KEY (citizen_id)
    REFERENCES public.users(id);

-- PostgreSQL database complete